# content-review-engine

./: AGENTS.md  Agent 上下文管理（公众号优化稿）.md  CHANGELOG.md  PROJECT_STATE.md  README.en.md  README.md  ROADMAP.md  pyproject.toml  report_demo.md
decisions/: ADR-0001-core-package-first.md
docs/: AGENT_DEVELOPMENT_RULES.md  ARCHITECTURE.md  CI.md  CLI.md  DATA_MODELS.md  LLM_PROVIDER_USAGE.md  MCP_SERVER.md  PROFILES.md  PYTHON_API.md  QUICKSTART.md  REPORTS.md  REVIEW_RULES.md  RULES.md  TESTING.md
examples/: article.md  markdown-structure-article.md  profile.yml
profiles/: wechat.yaml
scripts/: check-task.sh  ci-strict.sh  ci.sh
tasks/: TASK-0001-project-skeleton.md  TASK-0002-core-data-models.md  TASK-0002.5-package-import-config.md  TASK-0003: Add Markdown Reader and Profile Loading  TASK-0004-forbidden-terms-rule.md  TASK-0005-review-pipeline.md  TASK-0006-cli-review-command.md  TASK-0007-finding-location-and-context-snippets.md  TASK-0008-markdown-review-report-export.md  TASK-0009-markdown-fixtures-and-examples.md  TASK-0010-enable-packaged-cli-entrypoint.md  TASK-0011-stabilize-review-result-and-json-schema.md  TASK-0012-rule-registry-and-runner.md  TASK-0013-markdown-structure-rule.md  TASK-0014-markdown-links-and-images-rule.md  TASK-0015-batch-review-command.md  TASK-0016-cli-quality-gate-and-exit-codes.md  TASK-0017-forbidden-terms-allowlist-and-inline-suppression.md  TASK-0018-absolute-claims-rule.md  TASK-0019-profile-validation-command.md  TASK-0020-built-in-example-profiles.md  TASK-0021-profile-init-command.md  TASK-0022-profile-list-command.md  (+70 more)
(+254 files in other folders)
